floating urban blocks hmw wrapping error fixed

--- a/assets/css/anindividualproj15.scss
+++ b/assets/css/anindividualproj15.scss
@@ -15,9 +15,11 @@
     float: left;
 }
 
-.hmw {
-    margin-right: 0;
+.hmw{
+    padding-bottom: 2rem;
 }
+
+
 
 .team-header {
     color: hotpink;
@@ -31,7 +33,7 @@
 #users {
     margin-left: auto;
     margin-right: auto;
-    width: 20vw;
+    width: 12vw;
     height: auto;
 }
 
@@ -73,7 +75,7 @@
     text-align: right;
     height: 20%;
     font-style: italic;
-    font-size:1.5re
+    font-size:1.5rem
 }
 
 h2 {
@@ -102,13 +104,15 @@ h5 {
     font-style: italic;
 }
 
-
-
 #how {
     font-style: italic;
     font-weight: 600;
     color: #5B5B5B;
-    padding-bottom: 30px;
+    margin-bottom: 30px;
+}
+
+.question {
+    margin-bottom: 10px;
 }
 
 .topbar-img {
